# RayTracker

./: .sublime-project.sublime-workspace  README.md  RayTracker.sublime-workspace  Ray_tracing_test_data.json  index.html  sublime_project.sublime-workspace
Code/Data/128/: pixeldata.json
Code/Data/128/raydata/: raydata10.json  raydata13.json  raydata14.json  raydata16.json  raydata18.json  raydata2.json  raydata22.json  raydata24.json  raydata25.json  raydata26.json  raydata28.json  raydata29.json  raydata30.json  raydata31.json  raydata5.json
Code/Scripts/: ImageView.js  RayTreeView.js  main.js
Code/Styles/: ImageView.css  ParallelBarView.css  colors.css  flexbox.css
Code/c++/Project8_data_gathering/: CMakeCache.txt  CMakeLists.txt  PixelIterator.cpp  PixelIterator.h  cmake_install.cmake  main.cpp  scene_5.xml  scene_7.xml
Code/c++/Project8_data_gathering/src/: cyPoint.h  lights.h  materials.h  scene.h  viewport.cpp
Code/c++/Project8_data_gathering/src/tinyxml/: CMakeLists.txt
Data/: Ray_tracing_test_data.json
Data/128/raydata/: raydata0.json  raydata1.json  raydata10.json  raydata100.json  raydata101.json  raydata102.json  raydata103.json  raydata104.json  raydata105.json  raydata106.json  raydata107.json  raydata108.json  raydata109.json  raydata11.json  raydata110.json  raydata111.json  raydata112.json  raydata113.json  raydata114.json  raydata115.json  raydata116.json  raydata117.json  raydata118.json  raydata119.json  raydata12.json  raydata120.json  raydata121.json  raydata122.json  raydata123.json  raydata124.json  raydata125.json  raydata126.json  raydata127.json  raydata13.json  raydata14.json  raydata15.json  raydata16.json  raydata17.json  raydata18.json  raydata19.json  (+88 more)
Data/64/: pixeldata.json  ray_info_2.json
Data/64/raydata/: raydata0.json  raydata1.json  raydata10.json  raydata11.json  raydata12.json  raydata13.json  raydata14.json  raydata15.json  raydata16.json  raydata17.json  raydata18.json  raydata19.json  raydata2.json  raydata20.json  raydata21.json  raydata22.json  raydata23.json  raydata24.json  raydata25.json  raydata26.json  raydata27.json  raydata28.json  raydata29.json  raydata3.json  raydata30.json  raydata31.json  raydata4.json  raydata5.json  raydata6.json  raydata7.json  raydata8.json  raydata9.json
Data/Project8_data_gathering/: CMakeLists.txt  Project2_Shading.vcxproj  Project2_Shading.vcxproj.filters  Project8_Data_Gathering.sln  main.cpp  scene_7.xml
Data/Project8_data_gathering/src/: CMakeLists.txt  cmake_install.cmake  cyBVH.h  cyColor.h  objects.h  scene.h  texture.cpp  texture.h  timer.h  xmlload.cpp
Data/Project8_data_gathering/src/tinyxml/: cmake_install.cmake
Data/Project8_data_gathering/x64/Debug/: vc141.idb
Data/Project8_data_gathering/x64/Debug/Project8.24FE826E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project8_Data_Gathering.lastbuildstate
Scripts/: ImageView.js  ParallelBarView.js  PixelAnalysisView.js  RayTreeView.js  main.js
Styles/: ImageView.css  Main.css  RayTreeView.css  colors.css  flexbox.css  fonts.css  viewport.css
